@@ -40,7 +40,11 @@ class bdist (Command):
                     ('dist-dir=', 'd',
                      "directory to put final built distributions in "
                      "[default: dist]"),
+                    ('skip-build', None,
+                     "skip rebuilding everything (for testing/debugging)"),
                    ]
+
+    boolean_options = ['skip-build']
 
     help_options = [
         ('help-formats', None,
@@ -76,6 +80,7 @@ class bdist (Command):
         self.plat_name = None
         self.formats = None
         self.dist_dir = None
+        self.skip_build = 0
 
     # initialize_options()
 
